{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 121,
  "lineage": "bdaf6e79-d5fc-82f8-a2a6-1305e87d1d1f",
  "resources": [
    {
      "module": "module.Private_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:loadbalancer/app/private-LB/58cc487cf86eebdd",
            "arn_suffix": "app/private-LB/58cc487cf86eebdd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-LB-1425901670.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:loadbalancer/app/private-LB/58cc487cf86eebdd",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06b461b4f4166afc6",
              "sg-0d3b3299afe154763"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04a061177192cf479"
              },
              {
                "subnet_id": "subnet-0e50b12ff0e2c603f"
              }
            ],
            "subnets": [
              "subnet-04a061177192cf479",
              "subnet-0e50b12ff0e2c603f"
            ],
            "vpc_id": "vpc-0891e5673e90f1c78",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2-private.aws_instance.ec2",
            "module.ec2-private.aws_security_group.sg",
            "module.ec2-private.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.private_subnets",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Private_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:listener/app/private-LB/58cc487cf86eebdd/fa04f649b30abf09",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036889900000001/39569b2d138fe1fd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:listener/app/private-LB/58cc487cf86eebdd/fa04f649b30abf09",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:loadbalancer/app/private-LB/58cc487cf86eebdd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Private_load_balancer.aws_lb.load-balancer",
            "module.Private_load_balancer.aws_lb_target_group.tg",
            "module.ec2-private.aws_instance.ec2",
            "module.ec2-private.aws_security_group.sg",
            "module.ec2-private.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.private_subnets",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Private_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036889900000001/39569b2d138fe1fd",
            "arn_suffix": "targetgroup/tf-20240506140036889900000001/39569b2d138fe1fd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036889900000001/39569b2d138fe1fd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240506140036889900000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Private_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036889900000001/39569b2d138fe1fd-2024050614030417700000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036889900000001/39569b2d138fe1fd",
            "target_id": "i-02b1b81030d5b9e56"
          },
          "dependencies": [
            "module.Private_load_balancer.aws_lb_target_group.tg",
            "module.ec2-private.aws_instance.ec2",
            "module.ec2-private.aws_security_group.sg",
            "module.ec2-private.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.private_subnets",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036889900000001/39569b2d138fe1fd-2024050614030407010000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036889900000001/39569b2d138fe1fd",
            "target_id": "i-0483f97c9976c3b2a"
          },
          "dependencies": [
            "module.Private_load_balancer.aws_lb_target_group.tg",
            "module.ec2-private.aws_instance.ec2",
            "module.ec2-private.aws_security_group.sg",
            "module.ec2-private.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.private_subnets",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Public_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:loadbalancer/app/public-LB/ed14d96881bccfec",
            "arn_suffix": "app/public-LB/ed14d96881bccfec",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-LB-1609347268.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:loadbalancer/app/public-LB/ed14d96881bccfec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05d29551320e150f6",
              "sg-0bac931b1c0511a19"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a28244427a7cb1a"
              },
              {
                "subnet_id": "subnet-0b7609adc6c7795e5"
              }
            ],
            "subnets": [
              "subnet-05a28244427a7cb1a",
              "subnet-0b7609adc6c7795e5"
            ],
            "vpc_id": "vpc-0891e5673e90f1c78",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2-public.aws_instance.ec2",
            "module.ec2-public.aws_security_group.sg",
            "module.ec2-public.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Public_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:listener/app/public-LB/ed14d96881bccfec/e7a150e9ea994611",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036890800000002/69625e809a070d65",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:listener/app/public-LB/ed14d96881bccfec/e7a150e9ea994611",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:loadbalancer/app/public-LB/ed14d96881bccfec",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Public_load_balancer.aws_lb.load-balancer",
            "module.Public_load_balancer.aws_lb_target_group.tg",
            "module.ec2-public.aws_instance.ec2",
            "module.ec2-public.aws_security_group.sg",
            "module.ec2-public.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Public_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036890800000002/69625e809a070d65",
            "arn_suffix": "targetgroup/tf-20240506140036890800000002/69625e809a070d65",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036890800000002/69625e809a070d65",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240506140036890800000002",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Public_load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public-target-group-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036890800000002/69625e809a070d65-20240506140304374900000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036890800000002/69625e809a070d65",
            "target_id": "i-037451aa50645ead3"
          },
          "dependencies": [
            "module.Public_load_balancer.aws_lb_target_group.tg",
            "module.ec2-public.aws_instance.ec2",
            "module.ec2-public.aws_security_group.sg",
            "module.ec2-public.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036890800000002/69625e809a070d65-20240506140304478900000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:381492208371:targetgroup/tf-20240506140036890800000002/69625e809a070d65",
            "target_id": "i-08dd91d6d8b33e328"
          },
          "dependencies": [
            "module.Public_load_balancer.aws_lb_target_group.tg",
            "module.ec2-public.aws_instance.ec2",
            "module.ec2-public.aws_security_group.sg",
            "module.ec2-public.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-private[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3a6d8ff4c8fe246",
            "arn": "arn:aws:ec2:us-east-1:381492208371:instance/i-02b1b81030d5b9e56",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b1b81030d5b9e56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f72bff1be09e037",
            "private_dns": "ip-10-0-1-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.183",
            "public_ip": "54.242.223.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d8cb3215e00b8a1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-06b461b4f4166afc6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a061177192cf479",
            "tags": {
              "Name": "Private_1"
            },
            "tags_all": {
              "Name": "Private_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06b461b4f4166afc6"
            ]
          },
          "dependencies": [
            "module.ec2-private.aws_security_group.sg",
            "module.ec2-private.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.private_subnets",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-private[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:security-group/sg-06b461b4f4166afc6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b461b4f4166afc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240506140224951600000008",
            "name_prefix": "terraform-",
            "owner_id": "381492208371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NTI_sg"
            },
            "tags_all": {
              "Name": "NTI_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-private[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3a6d8ff4c8fe246",
            "arn": "arn:aws:ec2:us-east-1:381492208371:instance/i-0483f97c9976c3b2a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0483f97c9976c3b2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f9ffb1e370a43cee",
            "private_dns": "ip-10-0-3-254.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.254",
            "public_ip": "44.214.105.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04960eba133615c2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d3b3299afe154763"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e50b12ff0e2c603f",
            "tags": {
              "Name": "Private_2"
            },
            "tags_all": {
              "Name": "Private_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3b3299afe154763"
            ]
          },
          "dependencies": [
            "module.ec2-private.aws_security_group.sg",
            "module.ec2-private.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.private_subnets",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-private[1]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:security-group/sg-0d3b3299afe154763",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3b3299afe154763",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240506140224944600000006",
            "name_prefix": "terraform-",
            "owner_id": "381492208371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NTI_sg"
            },
            "tags_all": {
              "Name": "NTI_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-public[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3a6d8ff4c8fe246",
            "arn": "arn:aws:ec2:us-east-1:381492208371:instance/i-037451aa50645ead3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037451aa50645ead3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e510ea28eee32504",
            "private_dns": "ip-10-0-0-32.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.32",
            "public_ip": "54.89.34.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3ab9f6fb48236a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05d29551320e150f6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a28244427a7cb1a",
            "tags": {
              "Name": "Public_1"
            },
            "tags_all": {
              "Name": "Public_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05d29551320e150f6"
            ]
          },
          "dependencies": [
            "module.ec2-public.aws_security_group.sg",
            "module.ec2-public.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-public[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:security-group/sg-05d29551320e150f6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d29551320e150f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240506140224945400000007",
            "name_prefix": "terraform-",
            "owner_id": "381492208371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NTI_sg"
            },
            "tags_all": {
              "Name": "NTI_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-public[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e3a6d8ff4c8fe246",
            "arn": "arn:aws:ec2:us-east-1:381492208371:instance/i-08dd91d6d8b33e328",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08dd91d6d8b33e328",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0728fd25a9f573dbd",
            "private_dns": "ip-10-0-2-137.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.137",
            "public_ip": "44.203.19.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03bd778839022883f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bac931b1c0511a19"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7609adc6c7795e5",
            "tags": {
              "Name": "Public_2"
            },
            "tags_all": {
              "Name": "Public_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bac931b1c0511a19"
            ]
          },
          "dependencies": [
            "module.ec2-public.aws_security_group.sg",
            "module.ec2-public.data.aws_ami.ubuntu",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-public[1]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:security-group/sg-0bac931b1c0511a19",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bac931b1c0511a19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240506140224957200000009",
            "name_prefix": "terraform-",
            "owner_id": "381492208371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NTI_sg"
            },
            "tags_all": {
              "Name": "NTI_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:route-table/rtb-03a5b66af0731d5d0",
            "id": "rtb-03a5b66af0731d5d0",
            "owner_id": "381492208371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08288383a3bcfa442",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-private-table"
            },
            "tags_all": {
              "Name": "route-private-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:route-table/rtb-0f55bf4c6d00ddd6c",
            "id": "rtb-0f55bf4c6d00ddd6c",
            "owner_id": "381492208371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08b430de2c3d7d80c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-public-table"
            },
            "tags_all": {
              "Name": "route-public-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b6f38481bc18e4d",
            "route_table_id": "rtb-03a5b66af0731d5d0",
            "subnet_id": "subnet-04a061177192cf479"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private_route_table",
            "module.subnets.aws_subnet.private_subnets",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f84da1dca398d1b7",
            "route_table_id": "rtb-03a5b66af0731d5d0",
            "subnet_id": "subnet-0e50b12ff0e2c603f"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private_route_table",
            "module.subnets.aws_subnet.private_subnets",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018ded36d9b24448c",
            "route_table_id": "rtb-0f55bf4c6d00ddd6c",
            "subnet_id": "subnet-05a28244427a7cb1a"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public_route_table",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e68cd0911ec1fcf8",
            "route_table_id": "rtb-0f55bf4c6d00ddd6c",
            "subnet_id": "subnet-0b7609adc6c7795e5"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public_route_table",
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:subnet/subnet-04a061177192cf479",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a061177192cf479",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492208371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NTI-private-subnet-1"
            },
            "tags_all": {
              "Name": "NTI-private-subnet-1"
            },
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:subnet/subnet-0e50b12ff0e2c603f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e50b12ff0e2c603f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492208371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NTI-private-subnet-2"
            },
            "tags_all": {
              "Name": "NTI-private-subnet-2"
            },
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:subnet/subnet-05a28244427a7cb1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a28244427a7cb1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492208371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NTI-public-subnet-1"
            },
            "tags_all": {
              "Name": "NTI-public-subnet-1"
            },
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:subnet/subnet-0b7609adc6c7795e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7609adc6c7795e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492208371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "NTI-public-subnet-2"
            },
            "tags_all": {
              "Name": "NTI-public-subnet-2"
            },
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d67e3a304e879856",
            "arn": "arn:aws:ec2:us-east-1:381492208371:elastic-ip/eipalloc-0d67e3a304e879856",
            "domain": "vpc",
            "id": "eipalloc-0d67e3a304e879856",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-232-16-38.compute-1.amazonaws.com",
            "public_ip": "34.232.16.38",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:internet-gateway/igw-08b430de2c3d7d80c",
            "id": "igw-08b430de2c3d7d80c",
            "owner_id": "381492208371",
            "tags": {
              "Name": "NTI-IGW"
            },
            "tags_all": {
              "Name": "NTI-IGW"
            },
            "vpc_id": "vpc-0891e5673e90f1c78"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d67e3a304e879856",
            "association_id": "eipassoc-09e6f4ea433655281",
            "connectivity_type": "public",
            "id": "nat-08288383a3bcfa442",
            "network_interface_id": "eni-0df7b494490925671",
            "private_ip": "10.0.0.139",
            "public_ip": "34.232.16.38",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05a28244427a7cb1a",
            "tags": {
              "Name": "NTI-NAT"
            },
            "tags_all": {
              "Name": "NTI-NAT"
            }
          },
          "dependencies": [
            "module.subnets.aws_subnet.public_subnets",
            "module.subnets.data.aws_availability_zones.available",
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492208371:vpc/vpc-0891e5673e90f1c78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06d4678bbe3cc082a",
            "default_route_table_id": "rtb-082570fda77fd7f44",
            "default_security_group_id": "sg-00aad696a992e9230",
            "dhcp_options_id": "dopt-0d8e959f9919f2f40",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0891e5673e90f1c78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-082570fda77fd7f44",
            "owner_id": "381492208371",
            "tags": {
              "Name": "NTI-VPC"
            },
            "tags_all": {
              "Name": "NTI-VPC"
            }
          }
        }
      ]
    }
  ]
}